--- a/specs/anoncreds1/anoncredsmain.tex
+++ b/specs/anoncreds1/anoncredsmain.tex
@@ -13,8 +13,8 @@
 \newcommand{\fullpaper}{}
 
 \title{Anonymous credentials with type-3 revocation}
-\author{Dmitry Khovratovich, Michael Lodder, Cam Parra}
-\date{25 April 2022, version 0.6}
+\author{Dmitry Khovratovich, Michael Lodder, Cam Parra, Aritra Bhaduri}
+\date{15 November 2023, version 0.7}
 
 \begin{document}
 
